# nomad-simulation-examples

./: MANIFEST.in  README.md  pyproject.toml
src/nomad_simulation_examples/: __init__.py
src/nomad_simulation_examples/example_uploads/: __init__.py
src/nomad_simulation_examples/example_uploads/lammps/: README.md
src/nomad_simulation_examples/example_uploads/lammps/peptide/: log.lammps  log.lammps.OG  output.txt  peptide.dump  peptide.inp  peptide_out.data
src/nomad_simulation_examples/example_uploads/orca/GSCz8oRWRR2pOM5YJIHzVw/ORCA_inputs_results_pH7.4/: IBU0.out
src/nomad_simulation_examples/example_uploads/orca/O1i8LpM7S4qjsGHLxYnjgQ/DLPNO-CCSD(T)/: A-free-THF.out
src/nomad_simulation_examples/example_uploads/orca/Vn52cSAgSUC9BvwefTsT7g/orca1/: orca.out
src/nomad_simulation_examples/example_uploads/orca/_b-hD5zFS0a7EY1KGjbEAw/: u2_TD-DFT.out
src/nomad_simulation_examples/example_uploads/orca/eJo5a3zVSQChOHMYY63qkg/FeOOSc/: I-H+-P.out
src/nomad_simulation_examples/example_uploads/vasp/: NOTES.md  README.md  nomad_directory_mapping.json
src/nomad_simulation_examples/example_uploads/vasp/electronic_structure/: entries.json
src/nomad_simulation_examples/example_uploads/vasp/electronic_structure/--LPV_SHTFhbJzXPsdoodtyy_3kd_Antoni_Wadowski_GeometryOptimization/: metadata.json
src/nomad_simulation_examples/example_uploads/vasp/electronic_structure/bulk_unknown_00CG8/: GEO1_vasprun.xml  (+2 more)
src/nomad_simulation_examples/example_uploads/vasp/energetics/: entries.json
src/nomad_simulation_examples/example_uploads/vasp/structural_relaxation/: entries.json
(+71 files in other folders)
